--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "ionic",
     "awesome"
   ],
+  "scripts": {
+    "compile": "browserify src/Awesome/Infrastructure/View/**/*.js -o www/js/app.js -e src/Awesome/Infrastructure/View/AngularJS/Main.js -d -t [ babelify ]",
+    "compile:watch": "watch 'npm run compile' ./src"
+  },
   "dependencies": {
     "ionic-npm": "^1.0.2"
   },
@@ -23,6 +27,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
+    "bower": "^1.3.3",
     "browserify": "^12.0.1",
     "watch": "^0.16.0"
   },
