--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "awesome"
   ],
   "scripts": {
+    "test": " karma start tests/unit/karma.conf.js",
     "compile": "browserify src/Awesome/**/*.js -o www/js/app.js -e src/Awesome/Infrastructure/View/AngularJS/Main.js -d -t [ babelify ]",
     "compile:watch": "watch 'npm run compile' ./src"
   },
@@ -29,6 +30,14 @@
     "babelify": "^7.2.0",
     "bower": "^1.3.3",
     "browserify": "^12.0.1",
+    "browserify-istanbul": "^0.2.1",
+    "istanbul": "gotwarlost/istanbul#source-map",
+    "karma": "~0.12.31",
+    "karma-browserify": "^4.4.2",
+    "karma-coverage": "0.2.6",
+    "karma-jasmine": "~0.3.5",
+    "karma-junit-reporter": "~0.2.2",
+    "karma-phantomjs-launcher": "~0.1.4",
     "watch": "^0.16.0"
   },
   "cordovaPlugins": [
